1.2.0: paper support